--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+
+    <h1>La mia spesa</h1>
+    <h2>ricordarsi di prendere:</h2>
     
+    <ul id="lista-spesa">
+
+    </ul>
+
     <!-- script js -->
     <script src="./assets/js/main.js"></script>
 </body>
